# req-compile

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  defs.bzl  repositories.bzl
.github/workflows/: build.yml
extensions/: compile.bzl  dependencies.bzl  python.bzl
private/: compiler.bzl  compiler.py  reqs_repo.bzl  sdist_compiler.py  whl_repo.bzl
private/tests/: test_repositories_1.bzl
private/tests/annotations/: annotations_test_deps.bzl
private/tests/consumer/: BUILD.bazel  MODULE.bazel  main.py
private/tests/consumer_dep/: BUILD.bazel  MODULE.bazel
private/tests/find_links/: BUILD.bazel
private/tests/sdist/: BUILD.bazel
private/tests/simple/: BUILD.bazel
private/tests/transitive_ins/: BUILD.bazel
req_compile/: BUILD.bazel  cmdline.py  dists.py
req_compile/metadata/: BUILD.bazel
req_compile/repos/: BUILD.bazel  pypi.py  solution.py
tests/: BUILD.bazel
