workspace(name = "req_compile")

load("//:repositories.bzl", "req_compile_dependencies")

req_compile_dependencies()

load("//:repositories_transitive.bzl", "req_compile_transitive_dependencies")

req_compile_transitive_dependencies()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python311",
    python_version = "3.11",
)

load("//private/tests:test_repositories.bzl", "test_dependencies")

test_dependencies()

load("//private/tests:test_repositories_transitive.bzl", "test_transitive_dependencies")

test_transitive_dependencies()
