load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = [
    "//req_compile:__subpackages__",
    "//tests:__subpackages__",
])

py_library(
    name = "repository",
    srcs = ["repository.py"],
    deps = [
        "//req_compile:containers",
        "//req_compile:errors",
        "//req_compile:filename",
        "//req_compile:utils",
        "@setuptools",
    ],
)

py_library(
    name = "repos",
    srcs = ["__init__.py"],
    deps = [":repository"],
)

py_library(
    name = "findlinks",
    srcs = ["findlinks.py"],
    deps = [
        ":repository",
        "//req_compile:containers",
        "//req_compile:utils",
        "//req_compile/metadata",
        "@overrides",
        "@setuptools",
    ],
)

py_library(
    name = "multi",
    srcs = ["multi.py"],
    deps = [
        ":repository",
        "//req_compile:containers",
        "@overrides",
        "@setuptools",
    ],
)

py_library(
    name = "pypi",
    srcs = ["pypi.py"],
    deps = [
        ":repository",
        "//req_compile:containers",
        "//req_compile:errors",
        "//req_compile/metadata",
        "@overrides",
        "@requests",
        "@setuptools",
    ],
)

py_library(
    name = "solution",
    srcs = ["solution.py"],
    deps = [
        ":repository",
        ":source",
        "//req_compile:containers",
        "//req_compile:dists",
        "//req_compile:errors",
        "//req_compile:utils",
        "//req_compile/metadata",
        "@overrides",
        "@setuptools",
    ],
)

py_library(
    name = "source",
    srcs = ["source.py"],
    deps = [
        ":repository",
        "//req_compile:errors",
        "//req_compile:utils",
        "//req_compile/metadata",
        "@setuptools",
    ],
)
